--- a/worlds/nine_sols/shared_static_logic/connections.jsonc
+++ b/worlds/nine_sols/shared_static_logic/connections.jsonc
@@ -12,6 +12,7 @@
     { "from": "AFE - Between Root Nodes", "to": "AFE - Lower Root Node", "requires": [] },
     { "from": "AFE - Lower Root Node", "to": "AFE - Between Root Nodes", "requires": [] }, // grapple
     { "from": "AFE - Lower Root Node", "to": "AFE - Baichang Arena", "requires": [] }, // WC OR CL
+    { "from": "AFE - Right Exit", "to": "AFE - Baichang Arena", "requires": [] }, // one-way door
     { "from": "AFE - Baichang Arena", "to": "AFE - Lower Root Node", "requires": [
         { "item": "Cloud Leap" }
     ] },
@@ -35,8 +36,8 @@
 
     { "from": "AFE - Baichang Arena", "to": "CH - Center", "requires": [] }, // elevator
 
-    { "from": "AFE - Baichang Arena", "to": "CTH - Lower Left Exit", "requires": [] },
-    { "from": "CTH - Lower Left Exit", "to": "AFE - Baichang Arena", "requires": [] },
+    { "from": "AFE - Right Exit", "to": "CTH - Lower Exits", "requires": [] }, // CTH's lower *left* exit
+    { "from": "CTH - Lower Exits", "to": "AFE - Right Exit", "requires": [] },
 
     { "from": "AFE - Lower Left Exit", "to": "AFD - Right Exit", "requires": [] },
     { "from": "AFD - Right Exit", "to": "AFE - Lower Left Exit", "requires": [] },
@@ -78,8 +79,8 @@
     { "from": "AFD - Upper Left Exit", "to": "FU - Lower Right Exit", "requires": [] },
     { "from": "FU - Lower Right Exit", "to": "AFD - Upper Left Exit", "requires": [] },
 
-    { "from": "AFD - Lower Left Exit", "to": "PRW - Left Exit", "requires": [] },
-    { "from": "PRW - Left Exit", "to": "AFD - Lower Left Exit", "requires": [] },
+    { "from": "AFD - Lower Left Exit", "to": "PRW - Root Node", "requires": [] },
+    { "from": "PRW - Root Node", "to": "AFD - Lower Left Exit", "requires": [] },
 
     // Central Hall
     { "from": "CH - Center", "to": "CH - Left", "requires": [
@@ -137,5 +138,124 @@
     { "from": "CC - Caves Lower Left", "to": "CC - Caves Middle Left", "requires": [ { "item": "Tai-Chi Kick" } ] }, // grapple AND wall climb AND TCK
     { "from": "CC - Caves Lower Left", "to": "CC - Root Node", "requires": [] }, // one-way fall + shortcut rope
     { "from": "CC - Caves Lower Left", "to": "CC - Left Exit", "requires": [] },
-    { "from": "CC - Left Exit", "to": "CC - Caves Lower Left", "requires": [] } // grapple
+    { "from": "CC - Left Exit", "to": "CC - Caves Lower Left", "requires": [] }, // grapple
+
+    { "from": "CC - Left Exit", "to": "FGH - Right Exit", "requires": [] },
+    { "from": "FGH - Right Exit", "to": "CC - Left Exit", "requires": [] },
+
+    // Central Transport Hub
+    { "from": "CTH - Upper Left Exit", "to": "CTH - Bottom of Large Shaft", "requires": [] }, // elevator combat gauntlet
+    { "from": "CTH - Bottom of Large Shaft", "to": "CTH - Yanren Arena", "requires": [
+        { "item": "Mystic Nymph: Scout Mode" },
+        { "anyOf": [ { "item": "Tai-Chi Kick" }, { "item": "Air Dash" }, { "item": "Cloud Leap" } ] }
+    ] }, // nymph to activate crate, wall climb AND (kick OR airdash OR djump) to ride it, then djump OR wall climb to arena
+    { "from": "CTH - Above Elevator", "to": "CTH - Yanren Arena", "requires": [] }, // not quite a one-way fall, but no locations on the way
+    { "from": "CTH - Upper Right Exit", "to": "CTH - Bottom of Large Shaft", "requires": [] }, // one-way door
+    { "from": "CTH - Bottom of Large Shaft", "to": "CTH - Stairs Near Large Shaft", "requires": [] }, // hacking
+    { "from": "CTH - Stairs Near Large Shaft", "to": "CTH - Lower Left Vents", "requires": [] }, // wall climb
+    { "from": "CTH - Lower Left Vents", "to": "CTH - Stairs Near Large Shaft", "requires": [] }, // wall climb
+    { "from": "CTH - Lower Left Vents", "to": "CTH - Root Node", "requires": [] }, // wall climb
+    { "from": "CTH - Root Node", "to": "CTH - Lower Left Vents", "requires": [] },
+    { "from": "CTH - Root Node", "to": "CTH - Stairs Near Large Shaft", "requires": [] }, // one-way door
+    { "from": "CTH - Lower Left Vents", "to": "CTH - Lower Right Vents", "requires": [ { "anyOf": [
+        { "item": "Tai-Chi Kick" }, { "item": "Cloud Leap" }
+    ] } ] },
+    { "from": "CTH - Lower Right Vents", "to": "CTH - Lower Exits", "requires": [] }, // one-way fall
+    { "from": "CTH - Lower Exits", "to": "CTH - Lower Right Vents", "requires": [] }, // grapple
+
+    { "from": "CTH - Yanren Arena", "to": "CH - Center", "requires": [] }, // elevator
+
+    { "from": "CTH - Yanren Arena", "to": "GD - Right Exit", "requires": [] },
+    { "from": "GD - Right Exit", "to": "CTH - Yanren Arena", "requires": [] },
+
+    { "from": "CTH - Upper Right Exit", "to": "TRC - Left Exit", "requires": [] },
+    { "from": "TRC - Left Exit", "to": "CTH - Upper Right Exit", "requires": [] },
+
+    { "from": "CTH - Lower Exits", "to": "PRE - Right Transporter", "requires": [] }, // CTH's lower *right* exit
+    { "from": "PRE - Right Transporter", "to": "CTH - Lower Exits", "requires": [] },
+
+    // Power Reservoir (East)
+    { "from": "PRE - Right Transporter", "to": "PRE - Root Node", "requires": [
+        { "item": "Mystic Nymph: Scout Mode" } // for laser barrier
+    ] },
+    { "from": "PRE - Root Node", "to": "PRE - Right Transporter", "requires": [
+        { "item": "Mystic Nymph: Scout Mode" } // for laser barrier
+    ] },
+    { "from": "PRE - Root Node", "to": "PRE - Upper Right", "requires": [] }, // grapple OR djump
+    { "from": "PRE - Upper Right", "to": "PRE - Root Node", "requires": [] },
+    { "from": "PRE - Upper Right", "to": "PRE - Upper Left", "requires": [] }, // one-way hacking door, then grapple OR djump
+    { "from": "PRE - Upper Left", "to": "PRE - Left Transporter", "requires": [] }, // one-way hacking elevator
+    { "from": "PRE - Left Transporter", "to": "PRE - Jiaoduan Arena", "requires": [
+        { "item": "Mystic Nymph: Scout Mode" } // for laser barrier
+    ] },
+    { "from": "PRE - Jiaoduan Arena", "to": "PRE - Root Node", "requires": [] }, // one-way debris
+
+    { "from": "PRE - Left Transporter", "to": "PRC - Right Transporter", "requires": [] },
+    { "from": "PRC - Right Transporter", "to": "PRE - Left Transporter", "requires": [] },
+
+    // Power Reservoir (Central)
+    { "from": "PRC - Right Transporter", "to": "PRC - Upper Right", "requires": [ { "anyOf": [
+        { "item": "Tai-Chi Kick" }, { "item": "Air Dash" }, { "item": "Cloud Leap" }
+    ] } ] },
+    { "from": "PRC - Upper Right", "to": "PRC - Building Right of Light Bridge", "requires": [ { "anyOf": [
+        { "item": "Tai-Chi Kick" }, { "item": "Air Dash" }, { "item": "Cloud Leap" }
+    ] } ] },
+    { "from": "PRC - Building Right of Light Bridge", "to": "PRC - Light Bridge", "requires": [] }, // one-way door
+    { "from": "PRC - Light Bridge", "to": "PRC - Root Node", "requires": [] }, // one-way fall
+    { "from": "PRC - Root Node", "to": "PRC - Light Bridge", "requires": [] }, // hacking to unlock door right of Backup Control Room
+    { "from": "PRC - Left Transporter", "to": "PRC - Chest Near Left Transporter", "requires": [
+        { "item": "Cloud Leap" }
+    ] },
+    { "from": "PRC - Left Transporter", "to": "PRC - Root Node", "requires": [] }, // one-way door
+    { "from": "PRC - Left Transporter", "to": "PRC - Above Root Node", "requires": [] }, // DJ OR grapple
+    { "from": "PRC - Above Root Node", "to": "PRC - Chest Near Left Transporter", "requires": [
+        { "item": "Mystic Nymph: Scout Mode" } // to open door
+    ] },
+    { "from": "PRC - Above Root Node", "to": "PRC - Chest Left of Light Bridge", "requires": [ { "anyOf": [
+        { "item": "Tai-Chi Kick" }, { "item": "Air Dash" }, { "item": "Cloud Leap" }
+    ] } ] },
+    { "from": "PRC - Chest Left of Light Bridge", "to": "PRC - Light Bridge", "requires": [] }, // one-way door
+
+    { "from": "PRC - Left Transporter", "to": "PRW - Right Transporter", "requires": [] },
+    { "from": "PRW - Right Transporter", "to": "PRC - Left Transporter", "requires": [] },
+
+    { "from": "PRC - Light Bridge", "to": "RP - Root Node", "requires": [
+        { "region": "PRC - Root Node" } // AND hacking in Backup Control Room to restore power
+    ] },
+    // TODO: what happens if we spawn in RP and then try to exit left?
+
+    // Power Reservoir (West)
+    { "from": "PRW - Root Node", "to": "PRW - Guarded Chest", "requires": [ { "anyOf": [
+        { "item": "Tai-Chi Kick" },
+        [ { "item": "Air Dash" }, { "item": "Cloud Leap" } ]
+    ] } ] }, // DJ OR grapple then WC OR DJ then (DJ AND TCK) OR (WC AND (TCK OR (DJ AND AD)))
+		     // probably want to simplify this in practice even when we do shuffle WC/grapple
+    { "from": "PRW - Guarded Chest", "to": "PRW - Root Node", "requires": [] }, // grapple
+    { "from": "PRW - Guarded Chest", "to": "PRW - Power Lines", "requires": [] }, // one-way debris+fall
+    { "from": "PRW - Power Lines", "to": "PRW - Root Node", "requires": [] }, // one-way door
+    { "from": "PRW - Power Lines", "to": "PRW - Tao Fruit", "requires": [
+        { "item": "Mystic Nymph: Scout Mode" } // to open door, AND hacking 2
+    ] },
+    { "from": "PRW - Power Lines", "to": "PRW - Above Power Lines", "requires": [] },
+        // (WC AND hacking 1) the intended way from the upper left,
+        // OR (WC AND DJ) using the boxes in the upper right intended as a shortcut
+
+    // Radiant Pagoda
+    { "from": "RP - Root Node", "to": "RP - After Yingzhao", "requires": [] }, // TODO: combat logic?
+    { "from": "RP - After Yingzhao", "to": "CH - Center", "requires": [] } // elevator
 ]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
